--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Poppins', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #f2f4f8 !important;
+    color: #6c7293;
+    font-size: 16px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+h1 {
+    font-size: clamp(1.5rem, 3vw, 2.5rem) !important;
+}
+
+h2 {
+    font-size: clamp(1.3rem, 2vw, 2.2rem) !important;
+}
+
+h3 {
+    font-size: clamp(0.9rem, 1vw, 2rem) !important;
+}
+
+h4 {
+    font-size: clamp(0.8rem, 0.8vw, 2.125rem) !important;
+}
+
+h5 {
+    font-size: clamp(0.5rem, 0.6vw, 2rem) !important;
+}
+
+
+/* h6 {
+    font-size: clamp(0.3rem, 0.4vw, 1.5rem) !important;
+} */
+
+a:hover {
+    text-decoration: none !important;
+    color: inherit;
+}
+
+button {
+    outline: none !important;
 }
