--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Poppins', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #f2f4f8 !important;
-    color: #6c7293;
+    background-color: #fafafa;
+    display: block;
+    width: 80%;
+    margin: 0 auto !important;
+    float: none !important;
     font-size: 16px;
 }
 
@@ -12,36 +15,25 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-h1 {
-    font-size: clamp(1.5rem, 3vw, 2.5rem) !important;
+p {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    /* line-height: 1.5rem; */
+    text-transform: none !important;
 }
 
-h2 {
-    font-size: clamp(1.3rem, 2vw, 2.2rem) !important;
+html {
+    overflow-x: inherit;
+    scroll-behavior: smooth;
 }
 
-h3 {
-    font-size: clamp(0.9rem, 1vw, 2rem) !important;
-}
-
-h4 {
-    font-size: clamp(0.8rem, 0.8vw, 2.125rem) !important;
-}
-
-h5 {
-    font-size: clamp(0.5rem, 0.6vw, 2rem) !important;
-}
-
-
-/* h6 {
-    font-size: clamp(0.3rem, 0.4vw, 1.5rem) !important;
-} */
-
-a:hover {
-    text-decoration: none !important;
-    color: inherit;
-}
-
-button {
-    outline: none !important;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    text-transform: none !important;
 }
