--- a/src/Pages/home/landing/styles.css
+++ b/src/Pages/home/landing/styles.css
@@ -1,5 +1,5 @@
 .landing-background{
-    height: 80vh;
+    height: 92vh;
     background: url("../../../_shared/assets/img/bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -8,16 +8,24 @@
 .landing-overlay{
     background-color: rgba(0, 0, 0, 0.6);
     position: absolute;
-    height: 80vh;
+    height: 92vh;
     width: 100%;
 }
 
 .landing-content{
     /* z-index: 9999; */
     /* position: absolute; */
-    margin: auto auto;
-    position: relative;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
     z-index: 99999;
+    width: 100%;
+}
+
+.cta-btn{
+    padding: 0.8rem 3rem !important;
+    filter: drop-shadow(-2px 4px 13px rgba(0, 0, 0, 0.25)) !important;
 }
 
 .btn-outline-success{
