--- a/src/Pages/payment/style.css
+++ b/src/Pages/payment/style.css
@@ -9,6 +9,7 @@
     background-color: #FAFAFA;
     display: flex;
     justify-content: center;
+    max-width: 600px;
 }
 
 .vector{
@@ -18,6 +19,7 @@
 
 .status{
     padding: 2rem 0rem;
+    
 }
 .icon{
     margin-bottom: 2rem;
@@ -32,8 +34,6 @@
     -webkit-text-fill-color: transparent; 
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
-    letter-spacing: 0.1em;
-  
 }
 
 .typography-2{
@@ -45,9 +45,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; 
     -moz-background-clip: text;
-    -moz-text-fill-color: transparent;
-    letter-spacing: 0.1em;
-  
+    -moz-text-fill-color: transparent; 
 }
 
 .action{
