--- a/src/Pages/home/landing/styles.css
+++ b/src/Pages/home/landing/styles.css
@@ -45,9 +45,9 @@
   .ml4 .letters {
     position: absolute;
     margin: auto;
-    left: 0.5rem;
-    top: 0rem;
-    right: 1rem;
+    left: -3.5rem;
+    top: -1rem;
+    /* right: 1rem; */
     opacity: 0; 
 
   }
