--- a/src/Pages/home/landing/styles.css
+++ b/src/Pages/home/landing/styles.css
@@ -26,6 +26,7 @@
 .cta-btn{
     padding: 0.8rem 3rem !important;
     filter: drop-shadow(-2px 4px 13px rgba(0, 0, 0, 0.25)) !important;
+    outline: none !important;
 }
 
 .btn-outline-success{
