--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,9 @@
 /* @import "reset.css"; */
 
-@font-face{
-  font-family: Claremont;
-  src: url(_shared/assets/fonts/ClaremontRR-Light.ttf);
-  /* src: url(_shared/assets/fonts/ClaremontRR\ Medium.ttf); */
-}
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Nunito",-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -42,8 +37,14 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Claremont", sans-serif !important;
+  font-family: "Nunito", sans-serif !important;
   font-weight: 500 !important;
+  text-transform: none !important;
+}
+
+h5, h6{
+  font-family: "Roboto", sans-serif !important;
+  font-weight: 400 ;
   text-transform: none !important;
 }
 
