--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 /* @import "reset.css"; */
 
-
+html{
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: "Nunito",-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -12,6 +14,7 @@ body {
   display: block;
   width: 100%;
   font-size: 14px;
+  scroll-behavior: smooth;
 }
 
 code {
