--- a/src/index.css
+++ b/src/index.css
@@ -183,3 +183,26 @@ a:hover{
   color: #c7c7c7;
   text-decoration: none;
 }
+
+.swal-button {
+	background-color: #f8a927;
+	text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+	filter: drop-shadow(-2px 4px 13px rgba(0, 0, 0, 0.25)) !important;
+  }
+
+  .swal-button:hover{
+	background-color: #e69c26 !important;
+	transition: all .3s ease-in;
+  }
+
+  .swal-icon--success__ring {
+    border: 4px solid #f8a927  !important;
+}
+
+.swal-icon--success__line { 
+    background-color: #f8a927 !important; 
+}
+
+.swal-text {
+    color: #f8a927 !important;
+}
