--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ code {
 }
 
 p {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Nunito", sans-serif !important;
   font-size: 16px;
   /* line-height: 1.5rem; */
   text-transform: none !important;
