--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,3 @@
-@import url("grid.css");
 html,
 body {
   padding: 0;
@@ -37,20 +36,17 @@ h3,
 h4,
 h5,
 h6 {
-  color: #101820c7;
-
-  margin: 1rem 0;
+  color: rgba(16, 24, 32, 0.47) !important;
 }
 
 a {
-  color: #101820c7;
+  color: rgba(16, 24, 32, 0.47) ;
 }
 
-h1,h2{
+h1,
+h2 {
   font-family: "Raleway-Bold", sans-serif;
 }
-
-
 
 @media (max-width: 767.98px) {
   section {
