feat: update on website

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,8 +8,8 @@ body {
   background: linear-gradient(
       180deg,
       rgba(242, 170, 76, 0.17) 0%,
-      rgba(242, 170, 76, 0.0546563) 39.62%,
-      rgba(249, 218, 178, 0.12) 99%
+      rgba(250, 171, 67, 0.055) 39.62%,
+      rgba(247, 209, 160, 0.12) 99%
     ),
     #ffffff;
   background-repeat: no-repeat;
